--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     /* Menu estilo Berliner (discreto) */
     nav{background:#dbdbdb;border-top:1px solid rgba(0,0,0,0.04);border-bottom:1px solid rgba(0,0,0,0.04)}
-    .menu{max-width:768px;margin:0 auto;padding:8px 12px;display:flex;justify-content:space-between;align-items:center}
-    .menu-left{display:flex;gap:12px;align-items:center}
+    .menu{max-width:1200px;margin:0 auto;padding:8px 12px;display:flex;justify-content:space-between;align-items:center}
+    .menu-left{max-width: 768px;display:flex;gap:12px;align-items:center}
     .menu-left a{color:#000;text-decoration:none;font-weight:700;padding:6px 8px}
     .menu-left a:hover{color:rgb(0,208,130)}
 
