--- a/index.html
+++ b/index.html
@@ -63,22 +63,13 @@
     .manchete .meta{color:#666;font-size:0.85rem;margin-top:6px}
 
     /* Responsive: adaptar para mobile com uma coluna (manchete em topo) */
-    @media (max-width: 900px){
+  @media (max-width: 768px){
       main{grid-template-columns:1fr;padding:0 10px}
       .conteudo{grid-template-columns:1fr}
       .manchete{min-height:200px;padding:16px}
       .manchete .titulo{font-size:1.6rem}
       .hamburger{display:inline-block}
-      .menu-left{(max-width: 768px) {
-    nav ul {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    nav ul li {
-        margin: 5px 0;
-    }
-}}
+      .menu-left{display:none}
     }
 
     @media (max-width:480px){
