--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .menu-left a:hover{color:rgb(0,208,130)}
 
     /* botão hamburguer para mobile */
-    .hamburger{display:none;background:transparent;border:0;font-size:1.3rem}
+    .hamburger{display:block;background:transparent;border:0;font-size:1.3rem}
 
     /* Layout principal: grid inspirado em Berliner */
     main{max-width:1200px;margin:20px auto;padding:0 12px;display:grid;grid-template-columns:1fr 340px;gap:24px}
@@ -69,7 +69,7 @@
       .manchete{min-height:200px;padding:16px}
       .manchete .titulo{font-size:1.6rem}
       .hamburger{display:block}
-      .menu-left{display:block}
+      .menu-left{display:none}
     }
 
     @media (max-width:480px){
