--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       .conteudo{grid-template-columns:1fr}
       .manchete{min-height:200px;padding:16px}
       .manchete .titulo{font-size:1.6rem}
-      .hamburger{display:block}
-      .menu-left{display:none}
+      .hamburger{display:inline-block}
+      .menu-left{display:block}
     }
 
     @media (max-width:480px){
