--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     /* Menu estilo Berliner (discreto) */
     nav{background:#dbdbdb;border-top:1px solid rgba(0,0,0,0.04);border-bottom:1px solid rgba(0,0,0,0.04)}
     .menu{max-width:1200px;margin:0 auto;padding:8px 12px;display:flex;justify-content:space-between;align-items:center}
-    .menu-left{display:flex;gap:12px;align-items:center}
+    .menu-left{display:block;gap:12px;align-items:center}
     .menu-left a{color:#000;text-decoration:none;font-weight:700;padding:6px 8px}
     .menu-left a:hover{color:rgb(0,208,130)}
 
     /* botão hamburguer para mobile */
-    .hamburger{display:block;background:transparent;border:0;font-size:1.3rem}
+    .hamburger{display:none;background:transparent;border:0;font-size:1.3rem}
 
     /* Layout principal: grid inspirado em Berliner */
     main{max-width:1200px;margin:20px auto;padding:0 12px;display:grid;grid-template-columns:1fr 340px;gap:24px}
@@ -69,7 +69,7 @@
       .manchete{min-height:200px;padding:16px}
       .manchete .titulo{font-size:1.6rem}
       .hamburger{display:inline-block}
-      .menu-left{display:block}
+      .menu-left{display:none}
     }
 
     @media (max-width:480px){
